--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,46 @@
-[tool.poetry]
-name = "spv-gymnasium"
-version = "0.1.0"
-description = ""
-authors = ["Jet <junjet.tai@sony.com>"]
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-pytest = "^8.2.2"
-gymnasium = "^0.29.1"
-cloudpickle = "^3.0.0"
-
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "ninetails"
+version = "0.0.1"
+description = "Wrapper for creating vectorized gymnasium environments."
+authors = [
+  { name="Jet", email="taijunjet@hotmail.com" },
+]
+readme = "README.md"
+requires-python = ">= 3.9"
+license = { text = "MIT License" }
+keywords = ["Reinforcement Learning", "game", "RL", "AI", "gymnasium"]
+classifiers = [
+    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    'Intended Audience :: Science/Research',
+    'Topic :: Scientific/Engineering :: Artificial Intelligence',
+]
+dependencies = [
+    "cloudpickle",
+    "gymnasium",
+]
+
+[project.optional-dependencies]
+dev = ["pytest", "pre-commit"]
+
+[tool.pyright]
+reportMissingImports = "none"
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "I", "D"]
+ignore = []
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
